<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources"
            android:title="@string/nav_resources" />

        <item
            android:id="@+id/nav_emergency_contacts"
            android:icon="@drawable/ic_emergency"
            android:title="@string/nav_emergency_contacts" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/nav_account_header">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/nav_about_us" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
